Refactor(front) : Refactor unit & integration tests for Risk calculation